# Fall3D

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac
Example/: Example.inp
Scripts/: Script-Fall3d2GMT  Script-Fall3d_par  Script-Fall3d_ser  Script-SetDbs  Script-SetSrc  Script-SetTgsd  Script-arpa-to-nc  Script-era40-to-nc  Script-eraIn-to-nc  Script-eta-to-nc  Script-gfs05deg-to-nc  Script-gfs1deg-to-nc  Script-ncep1-to-nc  Script-ncep2-to-nc  Script-ncepFNL-to-nc
Sources/: Coordinates.f90  Domain.f90  Fall3d.f90  InpOut.f90  KindType.f90  Makefile  Makefile.am  Makefile.in  Master.f90  Numeric.f90  Parallel.F90  accum.f90  addradialwind.f90  addtime.f90  advctx.f90  advcty.f90  advctzc.f90  agrsrc.f90  chkdat.f90  cmass2d.f90  cmass3d.f90  corvver.f90  diffx.f90  diffy.f90  diffz.f90  divcorr.f90  endstep.f90  finddt.f90  inidat.f90  kappa3.f90  meteo.f90  printres_nc.f90  readat.f90  reagrd.f90  reagrn.f90  reamet.f90  reaout.f90  rearst.f90  reasrc.f90  runend.f90  (+18 more)
Sources/original/: InpOut.f90.ori  accum.f90.ori  corvver.f90.ori  kappa3.f90.ori  meteo.f90.ori  printres_nc.f90.ori  reamet.f90.ori  setbcc.f90.ori  setsrc.f90.ori  setvdrydep.f90.ori  sizloop.f90.ori  writps.f90
Utilities/Fall3d2GMT/: Fall3d2GMT.f90  InpOut.f90  KindType.f90  Makefile  Makefile.am  Makefile.in  Master.f90  TimeFun.f90  openinp.f90  readinp.f90  runend.f90  write_script.f90
Utilities/Grib2nc/: Grib2nc.f90  Makefile  Makefile.am  Makefile.in  Master.f90  inival.f90  write_nc_grid.f90  write_nc_var2d.f90  write_nc_var3d.f90
Utilities/Grib2nc/config/: arpa.configure  era40.configure  eraIn.configure  eta.configure  gfs05deg.configure  gfs1deg.configure  ncep1.configure  ncep2.configure  ncepFNL.configure
Utilities/Scripts/: Makefile  Makefile.am  Makefile.in  Script-Fall3d2GMT.in  Script-Fall3d_par.in  Script-Fall3d_ser.in  Script-SetDbs.in  Script-SetSrc.in  Script-SetTgsd.in  Script-arpa-to-nc.in  Script-era40-to-nc.in  Script-eraIn-to-nc.in  Script-eta-to-nc.in  Script-gfs05deg-to-nc.in  Script-gfs1deg-to-nc.in  Script-ncep1-to-nc.in  Script-ncep2-to-nc.in  Script-ncepFNL-to-nc.in
Utilities/SetDbs/: ARPA_nc.f90  CAL_nc.f90  Coordinates.f90  DBS_nc.f90  ECMWF_nc.f90  ETA_nc.f90  GFS_nc.f90  InpOut.f90  Makefile  Makefile.am  Makefile.in  Master.f90  MathFun.f90  NCEP1_nc.f90  NCEP2_nc.f90  PROF_nc.f90  SetDbs.f90  TimeFun.f90  WRF_nc.f90  Wind_Rotation.f90  checktime_ARPA.f90  checktime_CAL.f90  checktime_ECMWF.f90  checktime_ETA.f90  checktime_GFS.f90  checktime_NCEP1.f90  checktime_NCEP2.f90  checktime_PROF.f90  checktime_WRF.f90  get_par_ABL.f90  openinp.f90  read_ARPA_data.f90  read_ARPA_grid.f90  read_CAL_data.f90  read_CAL_grid.f90  read_DEBUG_data.f90  read_ECMWF_data.f90  read_ECMWF_grid.f90  read_ETA_data.f90  read_ETA_grid.f90  (+16 more)
Utilities/SetDbs/original/: DBS_nc.f90.old  Master.f90.old  SetDbs.f90.old  WRF_nc.f90.old  read_WRF_data.f90.old  write_DBS_data.f90.old  write_DBS_grid.f90.old
Utilities/SetSrc/: Air.f90  Deposit.f90  InpOut.f90  KindType.f90  Makefile  Makefile.am  Makefile.in  Master.f90  Plume.f90  SetSrc.f90  costa.f90  getnsrc.f90  getsrc.f90  merwind.f90  odepack.f90  openinp.f90  openplumef.f90  opkda1.f  opkda2.f  opkdmain.f  readdbs.f90  readgrn_erup.f90  readgrn_resu.f90  readinp.f90  readinp_erup.f90  readinp_resu.f90  runend.f90  setpsi.f90  solvedust.f90  solveplume.f90  solvepoint.f90  solvesuzuki.f90  wriplumefmass.f90  wriplumeheight.f90  wriplumeprop.f90  wriplumetem.f90  wriresu.f90  wrisrc_mesh.f90  wrisrc_nomesh.f90  wrisrc_resu.f90  (+1 more)
Utilities/SetSrc/original/: Deposit.f90  Master.f90  readdbs.f90  readgrn_resu.f90  readinp_resu.f90  solvedust.f90  wriresu.f90
Utilities/SetTgsd/: InpOut.f90  KindType.f90  Makefile  Makefile.am  Makefile.in  Master.f90  SetTgsd.f90  openinp.f90  readinp.f90  runend.f90  setfrac.f90  wrigrn.f90
Utilities/SetTgsd/original/: setfrac.f90.old
libMaster/: Decode.f90  KindType.f90  Makefile  Makefile.am  Makefile.in  get_areas_coordinates.f90  get_dbs_dimension.f90  get_dbs_property_cha.f90  get_dbs_property_int.f90  get_dbs_property_rea.f90  get_dbs_value_dimension.f90  get_dbs_value_plane.f90  get_dbs_value_point.f90  get_dbs_value_volume.f90  get_granulometry_name.f90  get_granulometry_nclass.f90  get_granulometry_value.f90  get_input_cha.f90  get_input_int.f90  get_input_npar.f90  get_input_rea.f90  get_points_coordinates.f90  get_points_npts.f90  get_source_coordinates.f90  get_source_mesh.f90  get_source_nclass.f90  get_source_nsrc.f90  get_source_value.f90
libMaster/original/: get_dbs_value_plane.f90.old
