#
# Define the directory tree for the distribution and Makefile generation
#
SUBDIRS=libMaster \
	Sources \
	Utilities/Scripts \
	Utilities/SetDbs  \
	Utilities/SetTgsd  \
	Utilities/Fall3d2GMT  \
	Utilities/Grib2nc  \
	Utilities/SetSrc

# Additional files or directories to be distributed
EXTRA_DIST = Example Manual/fall3d_7.0.pdf

# Remove these files with 'make clean'
CLEANFILES = *~

# Remove these files with 'make distclean'
# To remove installed files it is better to use 'make uninstall'
# DISTCLEANFILES = bin/*
